assets/ananke/css/_styles.css
/* Put your custom styles here and run `npm start` from the "src" directory on */

#TableOfContents ul li {
  margin-bottom: 1em;
}

.lh-copy blockquote {
  display: block;
  font-size: .875em;
  margin-left: 2rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
  border-left: 4px solid #ccc;
  padding-left: 1rem;

}

.nested-links a {
  overflow-wrap: break-word;
}

.nested-img img {
  height: auto;
}

.me-100 {
  max-height: 100%;
}

@media screen and (min-width: 30em) {
  img.ih1:not([src*=".svg"]) {
    height: fit-content;
  }

  img.ih1[src*=".svg"] {
    height: auto;
  }

  .mxh9-ns {
    max-height: 9em;
  }

  .vh-70-ns {
    height: 70vh;
  }
}

.h-max-content {
  height: max-content;
}

.min-h-fit-content {
  min-height: fit-content;
}

.mh-auto {
  margin-left: auto;
  margin-right: auto;
}

.mvh-70 {
  min-height: 1vh;
  max-height: 70vh;
}

.w-mc {
  min-width: 1vw;
  width: max-content;
}

img[src*=".svg"].w-mc {
  width: auto;
}

.presentation-pdf div {
  overflow: auto;
  resize: both;
}

.presentation-pdf div object {
  border: 2px solid;
  display: block;
  height: 760px;
  margin-right: .8em;
  resize: both;
  width: 100%;
}

@media (max-height: 499px) {
  .presentation-pdf div object {
      height: 100vh;
  }
}

@media (max-height: 900px) {
  .presentation-pdf div object {
      height: 480px;
  }
}

.intro-card-pdf-gallery {
  display: inline-block;
  margin-left: .8em;
  margin-right: .8em;
  margin-top: .3em;
  text-align: center;
  vertical-align: baseline;
}

.intro-card-pdf-gallery div {
  height: 665px;
  overflow: auto;
  text-align: center;
  width: 700px;
}

.intro-card-pdf-gallery object {
  border: 2px solid;
  display: block;
  height: 100%;
  margin-right: .8em;
  width: 100%;
}

main table {
  border-collapse: collapse;
  width: 100%;
}

main table tr th {
  background-color: silver;
  border-bottom: 4px ridge;
  border-left: 4px ridge;
  border-top: 4px ridge;
  text-align: left;
  width: max-content;
}

@supports (text-align: start) {
  main table tr th {
      text-align: start;
  }
}

main table tr th:last-of-type {
  border-right: 4px ridge;
}

main table tr td {
  border-bottom: 2px solid;
  border-left: 2px solid;
  width: max-content;
}

main table tr td:last-of-type {
  border-right: 2px solid;
  min-width: 50%;
}

main table tbody tr:nth-of-type(even) {
  background-color: lightgray;
}

